# screens

./: .flake8  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  curvature.py  dynspec.py  fields.py  fit.py  fitnlsq.py  pyproject.toml  screen1d.py  screen2ds.py  secspec.py  setup.cfg  setup.py  theta.py  tox.ini  try_dyn_fit.py  try_sec_fit.py  visualization.py
.github/workflows/: ci_workflows.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/background/: angle_plot_lib.py  example_figure.py  glossary.rst  multiple_screens.rst  velocities.rst
docs/data/: fake-data-J0437.npz  fit-results-J0437.npz
docs/examples/: example_figure.py  gen_velocities.rst  hue_cycle_cmap.py  simple_examples.rst  single_screen.rst
docs/tutorials/: different_transforms.rst  error_analysis.rst  extract_phys_pars.rst  fit_velocities.rst  gen_velocities.rst  infer_phys_pars.rst  screen1d.rst  single_screen.rst  two_screens.rst  vlbi_sims.rst  vlbi_simulation.rst
examples/: brisken.py  different_transforms.py  dm_gradient.py  psrb0834_model.py  refraction_ramp.py  screen2ds.py  theta.py  try_dyn_fit.py  try_sec_fit.py  two_screen_interaction.py  two_screens.py
licenses/: LICENSE.rst
screens/: __init__.py  conftest.py  conjspec.py  dynspec.py  fields.py  modeling.py  remap.py  screen.py  secspec.py  visualization.py
screens/tests/: test_conjspec.py  test_fit.py  test_modeling.py  test_phasor.py  test_remap.py  test_screen.py  test_secspec.py
screens/visualization/: __init__.py  hue_cycle_cmap.py  sketch.py  utils.py
