[metadata]
name = screens
author = M.H. van Kerkwijk
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = http://github.com/mhvk/screens
description = Pulsar scintillation screens
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/screens

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
screens = data/*

[tool:pytest]
testpaths = "screens" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    screens/_astropy_init*
    screens/conftest.py
    screens/*setup_package*
    screens/tests/*
    screens/*/tests/*
    screens/extern/*
    screens/version*
    */screens/_astropy_init*
    */screens/conftest.py
    */screens/*setup_package*
    */screens/tests/*
    */screens/*/tests/*
    */screens/extern/*
    */screens/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
