[metadata]
name = screens
author = M.H. van Kerkwijk
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = http://github.com/mhvk/screens
description = Pulsar scintillation screens
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/screens

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy>=4.3
    scipy
    baseband-tasks
    matplotlib
    uncertainties

[options.extras_require]
test =
    pytest-astropy
docs =
    astropy>=5.0
    sphinx<4.0
    sphinx-astropy>=1.6
    jupyter-sphinx
    uncertainties
    corner
    IPython

[options.package_data]
screens = data/*

[tool:pytest]
testpaths = "screens" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
filterwarnings =
    error
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
norecursedirs =
    _build

[coverage:run]
omit =
    screens/_astropy_init*
    screens/conftest.py
    screens/*setup_package*
    screens/tests/*
    screens/*/tests/*
    screens/extern/*
    screens/version*
    */screens/_astropy_init*
    */screens/conftest.py
    */screens/*setup_package*
    */screens/tests/*
    */screens/*/tests/*
    */screens/extern/*
    */screens/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    screens/conftest.py,screens/version.py,screens/__init__.py,
    screens/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    screens/conftest.py,screens/version.py,screens/__init__.py,
    screens/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses
